--- a/OurBook/OurBook.csproj
+++ b/OurBook/OurBook.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bill.cs" />
     <Compile Include="User.cs" />
     <Compile Include="OBAdminCreate.cs">
       <SubType>Form</SubType>
@@ -106,6 +107,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OBAdmin.resx">
       <DependentUpon>OBAdmin.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="OBHome.resx">
       <DependentUpon>OBHome.cs</DependentUpon>
